--- a/index.html
+++ b/index.html
@@ -29,29 +29,19 @@
           </ul>
           <ul class="info-bar list">
             <li class="item">
-              <button class="test-button"></button>
-              <svg
-                width="16"
-                height="12"
-                viewBox="0 0 16 12"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M14.5 0H1.50001C0.672854 0 0 0.672853 0 1.50001V10.5C0 11.3271 0.672854 12 1.50001 12H14.5C15.3271 12 16 11.3271 16 10.5V1.50001C16 0.672853 15.3271 0 14.5 0ZM14.5 0.999994C14.5679 0.999994 14.6325 1.01409 14.6916 1.0387L8 6.83838L1.30833 1.0387C1.36742 1.01412 1.43204 0.999994 1.49998 0.999994H14.5ZM14.5 11H1.50001C1.22414 11 0.999996 10.7759 0.999996 10.5V2.09521L7.67236 7.87792C7.76661 7.95944 7.8833 7.99999 8 7.99999C8.1167 7.99999 8.23339 7.95948 8.32764 7.87792L15 2.09521V10.5C15 10.7759 14.7759 11 14.5 11Z"
-                  fill="#757575"
-                />
-              </svg>
-
-              <svg>
-                <use href="./images/symbol-defs.svg"></use>
-              </svg>
               <a class="contact link" href="mailto:info@devstudio.com">
+                <svg class="contact-icon email">
+                  <use href="./images/sprite.svg#envelope"></use>
+                </svg>
                 info@devstudio.com</a
               >
             </li>
             <li class="item">
-              <a class="contact link" href="tel:096-111-11-11"
-                >+38 096 111 11 11</a
+              <a class="contact link" href="tel:096-111-11-11">
+                <svg class="contact-icon phone">
+                  <use href="./images/sprite.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -68,6 +58,11 @@
         <div class="container">
           <ul class="features-list list">
             <li class="item">
+              <div class="feature-decor">
+                <svg class="icon">
+                  <use href="images/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-header">Внимание к деталям</h3>
               <p class="feature-description">
                 Идейные соображения, а также начало повседневной работы по
@@ -75,6 +70,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="feature-decor">
+                <svg class="icon">
+                  <use href="images/sprite.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-header">Пунктуальность</h3>
               <p class="feature-description">
                 Задача организации, в особенности же рамки и место обучения
@@ -82,6 +82,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="feature-decor">
+                <svg class="icon">
+                  <use href="images/sprite.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-header">Планирование</h3>
               <p class="feature-description">
                 Равным образом консультация с широким активом в значительной
@@ -89,6 +94,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="feature-decor">
+                <svg class="icon">
+                  <use href="images/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-header">Современные технологии</h3>
               <p class="feature-description">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -147,6 +157,26 @@
               <div class="card-body">
                 <h3 class="card-header">Игорь Демьяненко</h3>
                 <p class="card-description" lang="en">Product Designer</p>
+                <div class="social-links">
+                  <a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#twitter"></use>
+                    </svg> </a
+                  ><a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#facebook"></use>
+                    </svg> </a
+                  ><a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -160,6 +190,26 @@
               <div class="card-body">
                 <h3 class="card-header">Ольга Репина</h3>
                 <p class="card-description" lang="en">Frontend Developer</p>
+                <div class="social-links">
+                  <a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#twitter"></use>
+                    </svg> </a
+                  ><a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#facebook"></use>
+                    </svg> </a
+                  ><a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -173,6 +223,26 @@
               <div class="card-body">
                 <h3 class="card-header">Николай Тарасов</h3>
                 <p class="card-description" lang="en">Marketing</p>
+                <div class="social-links">
+                  <a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#twitter"></use>
+                    </svg> </a
+                  ><a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#facebook"></use>
+                    </svg> </a
+                  ><a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-item">
@@ -186,41 +256,128 @@
               <div class="card-body">
                 <h3 class="card-header">Михаил Ермаков</h3>
                 <p class="card-description" lang="en">UI Designer</p>
+                <div class="social-links">
+                  <a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#twitter"></use>
+                    </svg> </a
+                  ><a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#facebook"></use>
+                    </svg> </a
+                  ><a href="#" class="social-link">
+                    <svg class="icon">
+                      <use href="images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="clients section">
+        <div class="container">
+          <h2 class="section-header">Постоянные клиенты</h2>
+          <div class="logo-items">
+            <a href="#" class="logo-item">
+              <svg class="icon">
+                <use href="images/sprite.svg#logo-ya-co"></use>
+              </svg>
+            </a>
+            <a href="#" class="logo-item">
+              <svg class="icon">
+                <use href="images/sprite.svg#logo-book"></use>
+              </svg>
+            </a>
+            <a href="#" class="logo-item">
+              <svg class="icon">
+                <use href="images/sprite.svg#logo-cocoa"></use>
+              </svg>
+            </a>
+            <a href="#" class="logo-item">
+              <svg class="icon">
+                <use href="images/sprite.svg#logo-foster-peters"></use>
+              </svg>
+            </a>
+            <a href="#" class="logo-item">
+              <svg class="icon">
+                <use href="images/sprite.svg#logo-leaf"></use>
+              </svg>
+            </a>
+            <a href="#" class="logo-item">
+              <svg class="icon">
+                <use href="images/sprite.svg#logo-cube"></use>
+              </svg>
+            </a>
+          </div>
         </div>
       </section>
     </main>
 
     <footer class="footer">
       <div class="container">
-        <a class="logo logo-white" href="#">Web<span>Studio</span></a>
-        <address>
-          <ul class="info-footer list">
-            <li class="item">
-              <a
-                class="address link"
-                href="https://www.google.com/maps/search/?api=1&query=Lesi+Ukrainky+Blvd,+26,+Kyiv"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="item">
-              <a
-                class="footer-contact contact link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="item">
-              <a class="footer-contact contact link" href="tel:096-111-11-11"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="footer-wrapper">
+          <div class="address">
+            <a class="logo logo-white" href="#">Web<span>Studio</span></a>
+            <address>
+              <ul class="info-footer list">
+                <li class="item">
+                  <a
+                    class="address link"
+                    href="https://www.google.com/maps/search/?api=1&query=Lesi+Ukrainky+Blvd,+26,+Kyiv"
+                    target="_blank"
+                    rel="noopener nofollow noreferrer"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="item">
+                  <a
+                    class="footer-contact contact link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="item">
+                  <a
+                    class="footer-contact contact link"
+                    href="tel:096-111-11-11"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="social">
+            <h3 class="feature-header">присоединяйтесь</h3>
+            <div class="social-links">
+              <a href="#" class="social-link">
+                <svg class="icon">
+                  <use href="images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+              <a href="#" class="social-link">
+                <svg class="icon">
+                  <use href="images/sprite.svg#twitter"></use>
+                </svg> </a
+              ><a href="#" class="social-link">
+                <svg class="icon">
+                  <use href="images/sprite.svg#facebook"></use>
+                </svg> </a
+              ><a href="#" class="social-link">
+                <svg class="icon">
+                  <use href="images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
