--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                 width="370"
                 height="294"
               />
+              <div class="label-overlay">
+                <h3 class="label-header feature-header">Десктопные приложения</h3>
+              </div>
             </li>
             <li class="occupation-item">
               <img
@@ -129,6 +132,9 @@
                 width="370"
                 height="294"
               />
+              <div class="label-overlay">
+                <h3 class="label-header feature-header">Мобильные приложения</h3>
+              </div>
             </li>
             <li class="occupation-item">
               <img
@@ -138,6 +144,9 @@
                 width="370"
                 height="294"
               />
+              <div class="label-overlay">
+                <h3 class="label-header feature-header">Дизайнерские решения</h3>
+              </div>
             </li>
           </ul>
         </div>
@@ -380,5 +389,8 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden">
+      <div class="modal"></div>
+    </div>
   </body>
 </html>
