--- a/portfolio.html
+++ b/portfolio.html
@@ -79,99 +79,155 @@
 
         <ul class="projects-list list">
           <li class="item">
-            <img
+            <div class="project-thumb">
+              <img
               class="image"
               src="images/portfolio/imgtechnocrack.jpg"
               alt="Ноутбук с открытым веб-сайтом в браузере"
-            />
+              />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            
             <div class="card-body">
               <h3 class="card-header">Технокряк</h3>
               <p class="card-description">Веб-сайт</p>
             </div>
           </li>
           <li class="item">
-            <img
-              class="image"
-              src="images/portfolio/imgposter_neworlean_vs_gs.jpg"
-              alt="Два баскетболиста"
-            />
+            <div class="project-thumb">
+              <img
+                class="image"
+                src="images/portfolio/imgposter_neworlean_vs_gs.jpg"
+                alt="Два баскетболиста"
+              />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
             <div class="card-body">
               <h3 class="card-header">Постер New Orlean vs Golden Star</h3>
               <p class="card-description">Дизайн</p>
             </div>
           </li>
           <li class="item">
-            <img
-              class="image"
-              src="images/portfolio/imgrestaurant_seafood.jpg"
-              alt="Логотип ресторана Seafood"
-            />
+            <div class="project-thumb">
+              <img
+                class="image"
+                src="images/portfolio/imgrestaurant_seafood.jpg"
+                alt="Логотип ресторана Seafood"
+              />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
             <div class="card-body">
               <h3 class="card-header">Ресторан Seafood</h3>
               <p class="card-description">Приложение</p>
             </div>
           </li>
           <li class="item">
-            <img
-              class="image"
-              src="images/portfolio/imgproject_prime.jpg"
-              alt="Навушники"
-            />
+            <div class="project-thumb">
+              <img
+                class="image"
+                src="images/portfolio/imgproject_prime.jpg"
+                alt="Навушники"
+              />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
             <div class="card-body">
               <h3 class="card-header">Проект Prime</h3>
               <p class="card-description">Маркетинг</p>
             </div>
           </li>
           <li class="item">
-            <img
-              class="image"
-              src="images/portfolio/imgproject_boxes.jpg"
-              alt="Коробочки"
-            />
+            <div class="project-thumb">
+              <img
+                class="image"
+                src="images/portfolio/imgproject_boxes.jpg"
+                alt="Коробочки"
+              />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
             <div class="card-body">
               <h3 class="card-header">Проект Boxes</h3>
               <p class="card-description">Приложение</p>
             </div>
           </li>
           <li class="item">
-            <img
-              class="image"
-              src="images/portfolio/imginspiration_has_no_borders.jpg"
-              alt="Компютер"
-            />
+            <div class="project-thumb">
+              <img
+                class="image"
+                src="images/portfolio/imginspiration_has_no_borders.jpg"
+                alt="Компютер"
+              />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
             <div class="card-body">
               <h3 class="card-header">Inspiration has no Borders</h3>
               <p class="card-description">Веб-сайт</p>
             </div>
           </li>
           <li class="item">
-            <img
-              class="image"
-              src="images/portfolio/imglimited_edition.jpg"
-              alt="Журнал"
-            />
+            <div class="project-thumb">
+              <img
+                class="image"
+                src="images/portfolio/imglimited_edition.jpg"
+                alt="Журнал"
+              />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
             <div class="card-body">
               <h3 class="card-header">Издание Limited Edition</h3>
               <p class="card-description">Дизайн</p>
             </div>
           </li>
           <li class="item">
-            <img
-              class="image"
-              src="images/portfolio/imglab.jpg"
-              alt="Бирка с надписью lab el tag"
-            />
+            <div class="project-thumb">
+              <img
+                class="image"
+                src="images/portfolio/imglab.jpg"
+                alt="Бирка с надписью lab el tag"
+              />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
             <div class="card-body">
               <h3 class="card-header">Проект LAB</h3>
               <p class="card-description">Маркетинг</p>
             </div>
           </li>
           <li class="item">
-            <img
+            <div class="project-thumb">
+              <img
               class="image"
               src="images/portfolio/imggrowing_business.jpg"
               alt="Робота с ноутбуком"
             />
+              <div class="project-overlay">
+                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            
             <div class="card-body">
               <h3 class="card-header">Growing Business</h3>
               <p class="card-description">Приложение</p>
