--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     <main>
       <section class="hero section">
         <h1 class="hero-header">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button btn" type="button" data-modal-open>Заказать услугу</button>
+        <button class="hero-button btn" type="button" data-modal-open>
+          Заказать услугу
+        </button>
       </section>
       <section class="features section">
         <div class="container">
@@ -121,7 +123,9 @@
                 height="294"
               />
               <div class="label-overlay">
-                <h3 class="label-header feature-header">Десктопные приложения</h3>
+                <h3 class="label-header feature-header">
+                  Десктопные приложения
+                </h3>
               </div>
             </li>
             <li class="occupation-item">
@@ -133,7 +137,9 @@
                 height="294"
               />
               <div class="label-overlay">
-                <h3 class="label-header feature-header">Мобильные приложения</h3>
+                <h3 class="label-header feature-header">
+                  Мобильные приложения
+                </h3>
               </div>
             </li>
             <li class="occupation-item">
@@ -145,7 +151,9 @@
                 height="294"
               />
               <div class="label-overlay">
-                <h3 class="label-header feature-header">Дизайнерские решения</h3>
+                <h3 class="label-header feature-header">
+                  Дизайнерские решения
+                </h3>
               </div>
             </li>
           </ul>
@@ -389,7 +397,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="button-close" type="button" data-modal-close></button>
       </div>
