--- a/portfolio.html
+++ b/portfolio.html
@@ -81,16 +81,19 @@
           <li class="item">
             <div class="project-thumb">
               <img
-              class="image"
-              src="images/portfolio/imgtechnocrack.jpg"
-              alt="Ноутбук с открытым веб-сайтом в браузере"
+                class="image"
+                src="images/portfolio/imgtechnocrack.jpg"
+                alt="Ноутбук с открытым веб-сайтом в браузере"
               />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
-            
+
             <div class="card-body">
               <h3 class="card-header">Технокряк</h3>
               <p class="card-description">Веб-сайт</p>
@@ -104,7 +107,10 @@
                 alt="Два баскетболиста"
               />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
@@ -121,7 +127,10 @@
                 alt="Логотип ресторана Seafood"
               />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
@@ -138,7 +147,10 @@
                 alt="Навушники"
               />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
@@ -155,7 +167,10 @@
                 alt="Коробочки"
               />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
@@ -172,7 +187,10 @@
                 alt="Компютер"
               />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
@@ -189,7 +207,10 @@
                 alt="Журнал"
               />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
@@ -206,7 +227,10 @@
                 alt="Бирка с надписью lab el tag"
               />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
@@ -218,16 +242,19 @@
           <li class="item">
             <div class="project-thumb">
               <img
-              class="image"
-              src="images/portfolio/imggrowing_business.jpg"
-              alt="Робота с ноутбуком"
-            />
+                class="image"
+                src="images/portfolio/imggrowing_business.jpg"
+                alt="Робота с ноутбуком"
+              />
               <div class="project-overlay">
-                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                <p class="project-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
             </div>
-            
+
             <div class="card-body">
               <h3 class="card-header">Growing Business</h3>
               <p class="card-description">Приложение</p>
