--- a/index.html
+++ b/index.html
@@ -150,11 +150,13 @@
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#twitter"></use>
-                    </svg> </a>
+                    </svg>
+                                </a>
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#facebook"></use>
-                    </svg> </a>
+                    </svg>
+                                </a>
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#linkedin"></use>
@@ -177,11 +179,13 @@
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#twitter"></use>
-                    </svg> </a>
+                    </svg>
+                                </a>
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#facebook"></use>
-                    </svg> </a>
+                    </svg>
+                                </a>
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#linkedin"></use>
@@ -204,11 +208,13 @@
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#twitter"></use>
-                    </svg> </a>
+                    </svg>
+                                </a>
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#facebook"></use>
-                    </svg> </a>
+                    </svg>
+                                </a>
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#linkedin"></use>
@@ -231,11 +237,13 @@
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#twitter"></use>
-                    </svg> </a>
+                    </svg>
+                                </a>
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#facebook"></use>
-                    </svg> </a>
+                    </svg>
+                                </a>
                                 <a href="#" class="social-link">
                                     <svg class="icon">
                       <use href="images/sprite.svg#linkedin"></use>
@@ -253,32 +261,32 @@
                 <div class="logo-items">
                     <a href="#" class="logo-item">
                         <svg class="icon">
-                <use href="images/sprite.svg#logo-ya-co"></use>
+                <use href="images/sprite.svg#logo-1"></use>
               </svg>
                     </a>
                     <a href="#" class="logo-item">
                         <svg class="icon">
-                <use href="images/sprite.svg#logo-book"></use>
+                <use href="images/sprite.svg#logo-2"></use>
               </svg>
                     </a>
                     <a href="#" class="logo-item">
                         <svg class="icon">
-                <use href="images/sprite.svg#logo-cocoa"></use>
+                <use href="images/sprite.svg#logo-3"></use>
               </svg>
                     </a>
                     <a href="#" class="logo-item">
                         <svg class="icon">
-                <use href="images/sprite.svg#logo-foster-peters"></use>
+                <use href="images/sprite.svg#logo-4"></use>
               </svg>
                     </a>
                     <a href="#" class="logo-item">
                         <svg class="icon">
-                <use href="images/sprite.svg#logo-leaf"></use>
+                <use href="images/sprite.svg#logo-5"></use>
               </svg>
                     </a>
                     <a href="#" class="logo-item">
                         <svg class="icon">
-                <use href="images/sprite.svg#logo-cube"></use>
+                <use href="images/sprite.svg#logo-6"></use>
               </svg>
                     </a>
                 </div>
@@ -331,11 +339,13 @@
                         <a href="#" class="social-link">
                             <svg class="icon">
                   <use href="images/sprite.svg#twitter"></use>
-                </svg> </a>
+                </svg>
+                        </a>
                         <a href="#" class="social-link">
                             <svg class="icon">
                   <use href="images/sprite.svg#facebook"></use>
-                </svg> </a>
+                </svg>
+                        </a>
                         <a href="#" class="social-link">
                             <svg class="icon">
                   <use href="images/sprite.svg#linkedin"></use>
@@ -348,28 +358,32 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="button-close" type="button" data-modal-close></button>
+            <button class="button-close" type="button" data-modal-close>
+                <svg class="icon">
+                    <use href="./images/sprite.svg#close-18px"></use>
+                </svg>
+            </button>
             <form class="form">
                 <h3 class="form-header">Оставьте свои данные, мы вам перезвоним</h3>
                 <div class="form-field">
                     <label class="form-label" for="name">Имя</label>
                     <div class="input-group">
-                        <input class="form-input" type="text" name="name" id="name">
-                        <span class="icon"></span>
+                        <input class="form-input" type="text" name="name" id="name" />
+                        <svg class="icon"><use href="./images/sprite.svg#form-person"></use></svg>
                     </div>
                 </div>
                 <div class="form-field">
                     <span class="form-label" for="phone">Телефон</span>
                     <div class="input-group">
-                        <input class="form-input" type="text" name="phone" id="phone">
-                        <span class="icon"></span>
+                        <input class="form-input" type="text" name="phone" id="phone" />
+                        <svg class="icon"><use href="./images/sprite.svg#form-phone"></use></svg>
                     </div>
                 </div>
                 <div class="form-field">
                     <label class="form-label" for="email">Почта</label>
                     <div class="input-group">
-                        <input class="form-input" type="text" name="email" id="email">
-                        <span class="icon"></span>
+                        <input class="form-input" type="text" name="email" id="email" />
+                        <svg class="icon"><use href="./images/sprite.svg#form-email"></use></svg>
                     </div>
                 </div>
                 <div class="form-field">
@@ -378,12 +392,17 @@
                 </div>
                 <div class="form-agree">
                     <label class="form-label">
-                    <input class="form-checkbox" type="checkbox" name="agree">
-                    Соглашаюсь с рассылкой и принимаю
-                </label>
-                    <a class="link">Условия договора</a>
+                        <input class="form-checkbox" type="checkbox" name="agree" />
+                        <span class="icon-checkbox">
+                            <svg class="icon">
+                                <use href="./images/sprite.svg#form-check"></use>
+                            </svg>
+                        </span>Соглашаюсь с рассылкой и принимаю&nbsp
+                        <a class="link" href="http://www.google.com" target="_blank" rel="noopener noreffer">Условия договора</a>
+                    </label>
                 </div>
-                <button class="hero-button submit-button btn" type="submit">Отправить</button>
+                <button class="hero-button submit-button btn" type="submit">
+                Отправить</button>
             </form>
         </div>
     </div>
